--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel='stylesheet' type='text/css' href='stylesheet.css'>
     </head>
     <body>
-        <h2>ROBIN HOOD PURCHASE BAR</h2>
+        <div id='stockValueChart'></div>
         <div id='purchase-box'></div>
+        <div id='carousel_app'></div> 
+        <div id='app'></div>
     </body>
     <script type='text/javascript' src='https://s3-us-west-1.amazonaws.com/robinhood-proxy-purchase/bundle.js'></script>
+    <script type='text/javascript' src='https://s3-us-west-1.amazonaws.com/robinhood-proxy-related-companies/bundle.js'></script>
+    <script type='text/javascript' src='https://s3-us-west-1.amazonaws.com/hrsf104-front-end-capstone-jim-martin/bundle.js/bundle.js'></script>
+    <script type='text/javascript' src='https://s3-us-west-1.amazonaws.com/52weekrange/bundle.js'></script>
 </html>
